force-app/main/default/objects/SBQQ__Quote__c/fields/Document_Data_Error__c.field-meta.xml
<CustomField>
    <fullName>Document_Data_Error__c</fullName>
    <inlineHelpText>Why the last generation failed. Internal diagnostics only - never printed in a document.</inlineHelpText>
    <label>Document Data Error</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>