force-app/main/default/objects/SBQQ__Quote__c/fields/Document_Data_Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Document_Data_Fingerprint__c</fullName>
    <inlineHelpText>System-managed change check for this Quote's current document tables. When the current Quote data and table settings still match this value, generation can reuse the existing Ready tables. Do not edit this field.</inlineHelpText>
    <label>Document Data Fingerprint</label>
    <length>64</length>
    <type>Text</type>
</CustomField>