force-app/main/default/objects/SBQQ__Quote__c/fields/Document_Data_Generated_On__c.field-meta.xml
<CustomField>
    <fullName>Document_Data_Generated_On__c</fullName>
    <inlineHelpText>When the document tables for this Quote were last generated successfully.</inlineHelpText>
    <label>Document Data Generated On</label>
    <type>DateTime</type>
</CustomField>