force-app/main/default/objects/SBQQ__Quote__c/fields/Document_Data_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Data_Request_Id__c</fullName>
    <inlineHelpText>Correlation ID of the request currently generating (or that last generated) this Quote's document data. Lets a second request tell an abandoned generation apart from one that is still live, and lets a support case reference a specific attempt.</inlineHelpText>
    <label>Document Data Request Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>