force-app/main/default/objects/SBQQ__Quote__c/fields/Document_Data_Started_At__c.field-meta.xml
<CustomField>
    <fullName>Document_Data_Started_At__c</fullName>
    <inlineHelpText>When the current Document_Data_Request_Id__c began generating. Compared against the abandonment window to decide whether a Quote stuck on Generating is still a live request or safe to take over.</inlineHelpText>
    <label>Document Data Started At</label>
    <type>DateTime</type>
</CustomField>