force-app/main/default/objects/SBQQ__Quote__c/fields/Document_Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Data_Status__c</fullName>
    <inlineHelpText>Whether the generated document tables for this Quote are safe to print. This is the single answer a document action needs - per-table status cannot tell you whether every table belongs to the same generation. Only generate a document when this reads Ready.</inlineHelpText>
    <label>Document Data Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Generated</fullName>
                <default>true</default>
                <label>Not Generated</label>
            </value>
            <value>
                <fullName>Stale</fullName>
            </value>
            <value>
                <fullName>Generating</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>