force-app/main/default/objects/SBQQ__Quote__c/fields/Document_Revision__c.field-meta.xml
<CustomField>
    <fullName>Document_Revision__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Whole-number revision carried in the neutral document contract. Increase it when the customer-facing document is formally revised.</inlineHelpText>
    <label>Document Revision</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>