force-app/main/default/objects/SBQQ__Quote__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <inlineHelpText>The customer-facing document being composed. This value travels in the neutral contract so an output service does not infer purpose from a template name.</inlineHelpText>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Quote</fullName><default>false</default><label>Quote</label></value>
            <value><fullName>Proposal</fullName><default>false</default><label>Proposal</label></value>
            <value><fullName>Order Form</fullName><default>true</default><label>Order Form</label></value>
            <value><fullName>Order Agreement</fullName><default>false</default><label>Order Agreement</label></value>
            <value><fullName>Purchase Order</fullName><default>false</default><label>Purchase Order</label></value>
            <value><fullName>Statement of Work</fullName><default>false</default><label>Statement of Work</label></value>
            <value><fullName>Amendment</fullName><default>false</default><label>Amendment</label></value>
            <value><fullName>Renewal</fullName><default>false</default><label>Renewal</label></value>
            <value><fullName>Change Order</fullName><default>false</default><label>Change Order</label></value>
            <value><fullName>Cancellation</fullName><default>false</default><label>Cancellation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>