force-app/main/default/objects/SBQQ__Quote__c/fields/Prior_Document_Reference__c.field-meta.xml
<CustomField>
    <fullName>Prior_Document_Reference__c</fullName>
    <inlineHelpText>The customer-facing number or stable reference of the document changed, renewed, amended, or cancelled by this document.</inlineHelpText>
    <label>Prior Document Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>